--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	
+	<nav class="top-navigation">
+		<div class="content">
+			<ul class="links">
+				<li class="active"><a href=""><b>Meet Karma</b></a>
+				</li>
+				<li><a href="">How it Works</a>
+				</li>
+				<li><a href="">Store</a>
+				</li>
+				<li><a href="">Blog</a>
+				</li>
+				<li><a href="">Help</a>
+				</li>
+				<li><a href="">Login</a>
+				</li>
+			</ul>
+			<img class="logo" src="images/karma-logo.svg" alt="karma" width=26>
+		</div>
+	</nav>
 </body>
 </html>
