--- a/index.html
+++ b/index.html
@@ -27,5 +27,14 @@
 			<img class="logo" src="images/karma-logo.svg" alt="karma" width=26>
 		</div>
 	</nav>
+	<section class="introduction">
+		<section class="content">
+			<h1 class="masthead-heading">Introducing Karma
+			</h1>
+			<h3 class="masthead-intro">Bring WiFi With you, everywhere you go.
+			</h3>
+		<button onclick="function">Learn More</button>
+		</section>
+	</section>
 </body>
 </html>
