--- a/index.html
+++ b/index.html
@@ -36,5 +36,23 @@
 		<button onclick="function">Learn More</button>
 		</section>
 	</section>
+	<section class="content icons">
+		<h2>Everyone needs a little Karma.</h2>
+		<ul class="icon-list">
+			<div class="devices"><li><figure>
+						<img src="images/icon-devices.svg" alt="devices" width="150">
+						<figcaption>Internet for all devices</figcaption>
+					</figure></li></div><!--
+			--><div class="devices"><li><figure>
+						<img src="images/icon-coffee.svg" alt="coffee" width="150">
+						<figcaption>Boost your productivity</figcaption>
+					</figure></li></div><!--
+			--><div class="devices"><li><figure>
+						<img src="images/icon-refill.svg" alt="refill" width="150">
+						<figcaption>Pay as You Go</figcaption>
+					</figure></li>
+			</div>
+		</ul>
+	</section>
 </body>
 </html>
