--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 	<nav class="top-navigation">
@@ -55,4 +56,17 @@
 		</ul>
 	</section>
 </body>
+<footer class="content social">
+	<div class="content">
+		<h5>Join us on</h5>
+			<ul class="social-icons">
+				<li>
+				<a href=""><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
+				</li>
+				<li><a href=""><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a></li>
+				<li><a href=""><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a></li>
+			</ul>
+		<p>&copy; Karma Mobility, Inc.</p>
+	</div>
+</footer>
 </html>
