--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Karma Clone</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
 </head>
@@ -26,7 +26,7 @@
 				<li><a href="">Login</a>
 				</li>
 			</ul>
-			<img class="logo" src="images/karma-logo.svg" alt="karma" width=26>
+			<img class="logo" src="../images/karma-logo.svg" alt="karma" width=26>
 		</div>
 	</nav>
 	<section class="introduction">
@@ -42,15 +42,15 @@
 		<h2>Everyone needs a little Karma.</h2>
 		<ul class="icon-list">
 			<div class="devices"><li><figure>
-						<img src="images/icon-devices.svg" alt="devices" width="150">
+						<img src="../images/icon-devices.svg" alt="devices" width="150">
 						<figcaption>Internet for all devices</figcaption>
 					</figure></li></div><!--
 			--><div class="devices"><li><figure>
-						<img src="images/icon-coffee.svg" alt="coffee" width="150">
+						<img src="../images/icon-coffee.svg" alt="coffee" width="150">
 						<figcaption>Boost your productivity</figcaption>
 					</figure></li></div><!--
 			--><div class="devices"><li><figure>
-						<img src="images/icon-refill.svg" alt="refill" width="150">
+						<img src="../images/icon-refill.svg" alt="refill" width="150">
 						<figcaption>Pay as You Go</figcaption>
 					</figure></li>
 			</div>
