--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li><a href="">Login</a>
 				</li>
 			</ul>
-			<img class="logo" src="../images/karma-logo.svg" alt="karma" width=26>
+			<img class="logo" src="../Images/karma-logo.svg" alt="karma" width=26>
 		</div>
 	</nav>
 	<section class="introduction">
@@ -42,15 +42,15 @@
 		<h2>Everyone needs a little Karma.</h2>
 		<ul class="icon-list">
 			<div class="devices"><li><figure>
-						<img src="../images/icon-devices.svg" alt="devices" width="150">
+						<img src="../Images/icon-devices.svg" alt="devices" width="150">
 						<figcaption>Internet for all devices</figcaption>
 					</figure></li></div><!--
 			--><div class="devices"><li><figure>
-						<img src="../images/icon-coffee.svg" alt="coffee" width="150">
+						<img src="../Images/icon-coffee.svg" alt="coffee" width="150">
 						<figcaption>Boost your productivity</figcaption>
 					</figure></li></div><!--
 			--><div class="devices"><li><figure>
-						<img src="../images/icon-refill.svg" alt="refill" width="150">
+						<img src="../Images/icon-refill.svg" alt="refill" width="150">
 						<figcaption>Pay as You Go</figcaption>
 					</figure></li>
 			</div>
