--- a/index.html
+++ b/index.html
@@ -13,20 +13,14 @@
 	<nav class="top-navigation">
 		<div class="content">
 			<ul class="links">
-				<li class="active"><a href=""><b>Meet Karma</b></a>
-				</li>
-				<li><a href="">How it Works</a>
-				</li>
-				<li><a href="">Store</a>
-				</li>
-				<li><a href="">Blog</a>
-				</li>
-				<li><a href="">Help</a>
-				</li>
-				<li><a href="">Login</a>
-				</li>
+				<li><a class="active" href=""><b>Meet Karma</b></a></li>
+				<li><a href="">How it Works</a></li>
+				<li><a href="">Store</a></li>
+				<li><a href="">Blog</a></li>
+				<li><a href="">Help</a></li>
+				<li><a href="">Login</a></li>
 			</ul>
-			<img class="logo" src="Images/karma-logo.svg" alt="karma" width=26>
+			<img class="logo" src="Images/karma-logo.svg" alt="karma" width="26">
 		</div>
 	</nav>
 	<section class="introduction">
@@ -35,39 +29,36 @@
 			</h1>
 			<h3 class="masthead-intro">Bring WiFi With you, everywhere you go.
 			</h3>
-		<button onclick="function">Learn More</button>
+		<button>Learn More</button>
 		</section>
 	</section>
 	<section class="content icons">
 		<h2>Everyone needs a little Karma.</h2>
-		<ul class="icon-list">
-			<div class="devices"><li><figure>
-						<img src="Images/icon-devices.svg" alt="devices" width="150">
-						<figcaption>Internet for all devices</figcaption>
-					</figure></li></div><!--
-			--><div class="devices"><li><figure>
-						<img src="Images/icon-coffee.svg" alt="coffee" width="150">
-						<figcaption>Boost your productivity</figcaption>
-					</figure></li></div><!--
-			--><div class="devices"><li><figure>
-						<img src="Images/icon-refill.svg" alt="refill" width="150">
-						<figcaption>Pay as You Go</figcaption>
-					</figure></li>
-			</div>
+		<ul class="icon-list clearfix">
+			<li><figure>
+					<img src="Images/icon-devices.svg" alt="devices" width="150">
+					<figcaption>Internet for all devices</figcaption>
+				</figure></li><!--
+		--><li><figure>
+					<img src="Images/icon-coffee.svg" alt="coffee" width="150">
+					<figcaption>Boost your productivity</figcaption>
+				</figure></li><!--
+		--><li><figure>
+					<img src="Images/icon-refill.svg" alt="refill" width="150">
+					<figcaption>Pay as You Go</figcaption>
+				</figure></li>
 		</ul>
 	</section>
+	<footer class="content social">
+		<div class="content">
+			<h5>Join us on</h5>
+				<ul class="social-icons">
+					<li><a href=""><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a></li>
+					<li><a href=""><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a></li>
+					<li><a href=""><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a></li>
+				</ul>
+			<p>&copy; Karma Mobility, Inc.</p>
+		</div>
+	</footer>
 </body>
-<footer class="content social">
-	<div class="content">
-		<h5>Join us on</h5>
-			<ul class="social-icons">
-				<li>
-				<a href=""><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a>
-				</li>
-				<li><a href=""><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></a></li>
-				<li><a href=""><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a></li>
-			</ul>
-		<p>&copy; Karma Mobility, Inc.</p>
-	</div>
-</footer>
 </html>
